# godot

./: .gitignore  .powershell-migration.md  CMakeLists.txt  README.md  RUN_PROJECT.md  SETUP_SUMMARY.md  build.bat  build.ps1  build.sh  godot_game.gdextension  godot_game.gdextension.uid  icon.svg.import  launch_godot.ps1  launch_project.bat  project.godot  setup.bat  setup.ps1  setup.sh
scenes/: main.tscn
src/: game.cpp  game.h  player.cpp  player.h  register_types.cpp  register_types.h  simple_osu_game.cpp  simple_osu_game.h
